_examples/manifests/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: main
          image: ondrejsika/kcdczsk23-server
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 60m
              memory: 40Mi
